# wasmhub

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile  manifest.json
.github/workflows/: build-runtimes.yml  ci.yml  release.yml
runtimes/go/: main.go  manifest.json
runtimes/rust/: Cargo.toml  manifest.json
runtimes/rust/src/: main.rs
scripts/: build-all.sh  build-go.sh  build-rust.sh  generate-global-manifest.sh  generate-metadata.sh  install-wasi-sdk.sh  verify-binary.sh
src/: cache.rs  error.rs  lib.rs  loader.rs  manifest.rs  runtime.rs
